Fix one column PGHD charts grid being too tall

--- a/src/components/Analytics/Analytics.css
+++ b/src/components/Analytics/Analytics.css
@@ -26,10 +26,6 @@
   grid-area: pghd;
 }
 
-.Analytics__focus {
-  height: calc(100% - 28px - 20px);
-}
-
 .Analytics__pghd-charts {
   display: grid;
   justify-items: center;
@@ -43,7 +39,6 @@
 
 @media only screen and (max-width: 1200px) {
   .Analytics__pghd-charts {
-    grid-auto-rows: calc(100% - 28px - 4%/2);
     grid-template-columns: 100%;
   }
 }
